# todoish

./: .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  make.sh  pyproject.toml  wt.rc.example
doc/: specification.md
prez/: presentation.html  presentation.md
src/: __init__.py  main.py  storage.py
tests/: __init__.py  test_storage.py
