[project]
name = "todoish"
version = "0.1.0"
description = "A minimalist command-line task manager demonstrating clean architecture principles"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1,<9.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "ruff>=0.12.5,<1.0.0",
    "pyright>=1.1.403,<2.0.0",
]
